킬카운트 수정중

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ crashlytics-build.properties
 
 Assets/Resources/Bayat.meta
 Assets/Resources/Bayat/Core.meta
+Assets/Images/GameORB/Material/Health_2.mat
+Assets/Images/GameORB/Material/Health_4.mat
